Simplifies code 😎
…by directly using the charset, rather than resolving it via the copied name.

SIRI-1141